# maia

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP_STATUS.md  TESTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: harness-engineering.md  harness-runbook.md
docs/adr/: 001-runtime-and-messaging-architecture.md
docs/contracts/: contract-drift-checks.md  keryx-public-contract-matrix.md  part4-ux-drift-checks.md  part4-ux-public-contract-matrix.md  part5-oss-drift-checks.md  part5-oss-public-surface-matrix.md  portable-state-drift-checks.md  portable-state-public-contract-matrix.md
docs/plans/: 2026-04-19-keryx-phase1-core-plan.md  2026-04-20-keryx-migration-closeout.md  2026-04-20-keryx-phase2-4-migration-lock.md  2026-04-20-keryx-thread-redefinition-plan.md  2026-04-21-maia-oss-roadmap-draft.md  2026-04-22-maia-init-one-command-onboarding.md  keryx-skill-bootstrap.md  maia-product-roadmap-5-parts.md  (+15 more)
scripts/: check_invariants.py  codex-parse-review.py  codex-plan.sh  codex-review.sh  codex-watch-patterns.sh  codex-worker.sh  install.sh  rebuild-runtime-worker-image.sh  verify.sh
tests/: test_agent_context.py  test_agent_model.py  test_broker_contract.py  test_cli.py  test_cli_init.py  test_cli_runtime.py  test_collaboration_storage.py  test_docker_runtime_adapter.py  test_handoff_model.py  test_harness_watch_policy.py  test_hermes_gateway_bridge.py  test_hermes_runtime_worker.py  test_install_script.py  test_invariant_checks.py  test_keryx_models.py  test_keryx_server.py  test_keryx_service.py  test_keryx_storage.py  test_message_model.py  test_presence_model.py  test_rabbitmq_broker.py  test_registry.py  test_runtime_adapter_contract.py  test_runtime_spec.py  test_sqlite_state.py  test_storage.py
(+193 files in other folders)
