[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maia"
version = "0.1.0"
description = "Maia CLI skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
maia = "maia.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
