[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maia"
version = "0.1.0"
description = "Maia control plane CLI for agent onboarding and runtime operations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Maia contributors" }]
keywords = ["agents", "cli", "control-plane", "keryx", "maia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/isme2n/maia"
Documentation = "https://github.com/isme2n/maia/blob/v0.1.0/README.md"
Repository = "https://github.com/isme2n/maia"
Issues = "https://github.com/isme2n/maia/issues"
Security = "https://github.com/isme2n/maia/security"
Changelog = "https://github.com/isme2n/maia/releases"

[project.scripts]
maia = "maia.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
